src/tests/data/TypeErrors/AssignWrongArrayElementToChar.c

#include <stdio.h>

int main()
{
    int array[3] = {1, 2, 3};
    char c = array[0];  // ERROR
	return 0;
}